// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> test case explicitly renders the primary style 1`] = `
.c0 {
  position: relative;
  border-color: transparent;
  outline: none;
  border-top-left-radius: 16px;
  border-top-right-radius: 16px;
  border-bottom-right-radius: 18px;
  border-bottom-left-radius: 18px;
  border-width: 0 0 4px;
  padding: 13px 16px;
  background-color: #78c800;
  color: #fff;
  cursor: pointer;
}

.c0:after {
  position: absolute;
  background-color: #58a700;
  border-color: transparent;
  border-width: 0 0 4px;
  border-radius: 16px;
  bottom: -8px;
  content: "";
  left: 0;
  right: 0;
  z-index: -1;
  top: 0;
}

.c0:focus {
  outline: none;
}

.c1 {
  position: relative;
  text-transform: uppercase;
  font-weight: bold;
  top: 1px;
}

<button
  class="c0"
  data-testid="styledButton"
>
  <span
    class="c1"
    data-testid="label"
  >
    Click me
  </span>
</button>
`;

exports[`<Button /> test case implicitly renders the primary style 1`] = `
.c0 {
  position: relative;
  border-color: transparent;
  outline: none;
  border-top-left-radius: 16px;
  border-top-right-radius: 16px;
  border-bottom-right-radius: 18px;
  border-bottom-left-radius: 18px;
  border-width: 0 0 4px;
  padding: 13px 16px;
  background-color: #78c800;
  color: #fff;
  cursor: pointer;
}

.c0:after {
  position: absolute;
  background-color: #58a700;
  border-color: transparent;
  border-width: 0 0 4px;
  border-radius: 16px;
  bottom: -8px;
  content: "";
  left: 0;
  right: 0;
  z-index: -1;
  top: 0;
}

.c0:focus {
  outline: none;
}

.c1 {
  position: relative;
  text-transform: uppercase;
  font-weight: bold;
  top: 1px;
}

<button
  class="c0"
  data-testid="styledButton"
>
  <span
    class="c1"
    data-testid="label"
  >
    Click me
  </span>
</button>
`;

exports[`<Button /> test case renders secondary style 1`] = `
.c0 {
  position: relative;
  border-color: transparent;
  outline: none;
  border-top-left-radius: 16px;
  border-top-right-radius: 16px;
  border-bottom-right-radius: 18px;
  border-bottom-left-radius: 18px;
  border-width: 0 0 4px;
  padding: 13px 16px;
  background-color: #fff;
  color: #0b3e71;
  cursor: pointer;
}

.c0:after {
  position: absolute;
  background-color: rgba(255,255,255,0.5) border-color:transparent;
  border-width: 0 0 4px;
  border-radius: 16px;
  bottom: -8px;
  content: "";
  left: 0;
  right: 0;
  z-index: -1;
  top: 0;
}

.c0:focus {
  outline: none;
}

.c1 {
  position: relative;
  text-transform: uppercase;
  font-weight: bold;
  top: 1px;
}

<button
  class="c0"
  data-testid="styledButton"
>
  <span
    class="c1"
    data-testid="label"
  >
    Click me
  </span>
</button>
`;

exports[`<Button /> test case renders tertiary style 1`] = `
.c0 {
  position: relative;
  border-color: transparent;
  outline: none;
  border-top-left-radius: 16px;
  border-top-right-radius: 16px;
  border-bottom-right-radius: 18px;
  border-bottom-left-radius: 18px;
  border-width: 0 0 4px;
  padding: 13px 16px;
  background-color: #1cb0f6;
  color: #fff;
  cursor: pointer;
}

.c0:after {
  position: absolute;
  background-color: #1899d6;
  border-color: transparent;
  border-width: 0 0 4px;
  border-radius: 16px;
  bottom: -8px;
  content: "";
  left: 0;
  right: 0;
  z-index: -1;
  top: 0;
}

.c0:focus {
  outline: none;
}

.c1 {
  position: relative;
  text-transform: uppercase;
  font-weight: bold;
  top: 1px;
}

<button
  class="c0"
  data-testid="styledButton"
>
  <span
    class="c1"
    data-testid="label"
  >
    Click me
  </span>
</button>
`;
